--- a/1_labo_fisica/main.tex
+++ b/1_labo_fisica/main.tex
@@ -47,7 +47,7 @@
 \fancyhead[R]{\footnotesize Fac. de Ciencias}   % dereecha
 \fancyfoot[R]{\footnotesize Reporte}  % Pie derecha
 \fancyfoot[C]{\thepage}  % centro
-\fancyfoot[L]{\footnotesize Segunda Ley de Newton}  %izquierda
+\fancyfoot[L]{\footnotesize Dinamica de Rotaci\'{o}n}  %izquierda
 \renewcommand{\footrulewidth}{0.4pt}
 
 
@@ -106,7 +106,7 @@
 
 \begin{minipage}{0.9\textwidth} 
 \begin{center}																					%%%
-\textsc{\LARGE  Laboratorio de Física BFI01 A}
+\textsc{\LARGE  Laboratorio de Física CF1B2-B}
 \end{center}
 \end{minipage}\\[0.3cm]
 %%%
@@ -114,7 +114,7 @@
  			\vspace*{0.4cm}																		%%%
 																					%%%
 \HRule \\[0.5cm]																	%%%
-{ \huge \bfseries Segunda Ley de Newton}\\[0.2cm]	%%%
+{ \huge \bfseries Din\'{a}mica de Rotaci\'{o}n}\\[0.2cm]	%%%
  																					%%%
 \HRule \\[0.9cm]																	%%%
  																				%%%
@@ -124,7 +124,7 @@
 
 % Aqui a continuación pongan los nombres de los integrantes
 \emph{El grupo conformado por:}\\[2mm]
-Llactahuaman Quispe Benjamin\\20232268G \\[1mm]
+Vasquez Alvarado Luis Martin   \\20234143G \\[1mm]
 Cortez Núñez Christian\\20232203B\\[1mm]
 Rocca Cruz Axel\\20234046A\\[1mm]
  
@@ -140,7 +140,7 @@ Rocca Cruz Axel\\20234046A\\[1mm]
 \vspace{-1.9cm}											%%%
 \begin{flushright} \large															%%%
 \emph{Profesor:}\\[2mm]																	%%%
-Tello Gálvez Julio César\\[1mm]Brocca Pobes Manuel Enrique\\
+AMORETTI VIDAL JESUS ESTEBAN \\ [1mm]NAUPA ROQUE ALEXANDER RAUL\\
 \end{flushright}																	%%%
 \end{minipage}	
 \vspace*{1cm}
@@ -151,10 +151,7 @@ Tello Gálvez Julio César\\[1mm]Brocca Pobes Manuel Enrique\\
 \vspace{-2.4cm}	
 \begin{minipage}{0.98\textwidth}
 \begin{flushright}	
-\large
-\emph{Fecha de la práctica:}\\
-\vspace{0.2cm}
-12 de mayo de 2023 
+        \textbf{Mesa : E7}
 \end{flushright}
 \end{minipage}
 
@@ -163,7 +160,7 @@ Tello Gálvez Julio César\\[1mm]Brocca Pobes Manuel Enrique\\
 \large{\today}\\
 \vspace{0.3cm}
 
-{ \Large\bfseries 2023-1}
+{ \Large\bfseries 2025-1}
 										 			
 \end{center}							 											
 																					
@@ -171,128 +168,36 @@ Tello Gálvez Julio César\\[1mm]Brocca Pobes Manuel Enrique\\
 %%%%%%%%%%%%%%%%%%%% TERMINA PORTADA %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \tableofcontents 
+\newpage																		
 
-\newpage
+\section{Introducción y objetivos del experimento}
+Este informe se basa en datos obtenidos en el laboratorio de Física II de la Facultad de Ciencias. Se fundamenta en la guía de laboratorio y otras referencias citadas más adelante. Su objetivo es responder el cuestionario y comparar los resultados experimentales con la teoría. De acuerdo con la guía del laboratorio y las instrucciones del docente, el informe se organiza como sigue.
 
-\begin{center}
-    \textbf{\huge Segunda Ley de Newton}
-\end{center}
-
-\section{Objetivos}
-\subsection{Competencias Generales}
+\subsection{Competencias generales}
 \begin{itemize}
-    \item Verificar experimentalmente la segunda ley de Newton
-\end{itemize} 
-\subsection{Competencias Específicas}
-\begin{itemize}
-    \item Calibrar dos resortes para hallar su constante elástica y con ello hallar la fuerza que estos aplican sobre un disco.
-    \item Hallar la aceleración a partir de los ticks marcados por el disco sobre el papel donde realiza su trayectoria.
+  \item Analizar el movimiento de rodadura de una rueda de Maxwell y, con base en las mediciones realizadas, calcular su momento de inercia respecto al eje perpendicular que atraviesa su centro de gravedad.
 \end{itemize}
 
-
+\subsection{Competencias específicas}
 \begin{itemize}
-    \item El resorte A (de 10,1 cm) presentaba una deformación en uno de sus extremos, la cuál no se tomó en cuenta para la longitud inicial debido a que era un segmento prácticamente rígido.
-    \item La deformación mostrada por ambos resortes con solo el primer peso era considerablemente menor que la incertidumbre de los instrumentos de medición.
-    \item Debido a la distribución del tablero el punto B se ubicaba 1,4 cm por fuera del papel, lo que dificultó tomar las medidas para cada punto de la trayectoria.
-    \item El chispero en el segmento más acentuado de la curva dejaba marcados dos puntos en lugar de uno por cada tick.
+        \item Registrar el tiempo que tarda la rueda en completar cada recorrido.
+
+        \item Medir la masa y las dimensiones de la rueda para determinar su momento de inercia utilizando dos métodos: a través de su energía cinética de rotación y por la distribución geométrica de su masa.
+
+                \textbf{Aclaración}: Según las instrucciones del profesor, no se llevó a cabo el cálculo del momento de inercia de la rueda basado en la distribución geométrica de su masa.
 \end{itemize}
 
-\section{Conclusiones}
-
-\begin{itemize}
-    \item Se logró verificar experimentalmente la segunda Ley de Newton. El valor promedio del cociente entre el módulo de la fuerza y aceleración es 2,206 Kg y la desviación estándar es 0,133 por lo cual se obtuvo un error mínimo en los resultados.
-    \item Se logró calibrar los resortes A y B y se halló que sus constantes de elasticidad son 28,399 N/m y 35,102 N/m respectivamente.
-\end{itemize}
-
-\section*{1. Introducción y objetivos del experimento}
-El presente informe se basa en los datos recopilados de la experimentación en el laboratorio de Física II, en la Facultad de Ciencias. Se apoya en la guía de laboratorio y otras fuentes detalladas más adelante. El propósito del informe es responder las preguntas del cuestionario, de manera adecuada; así como contrastar los resultados de la experimentación con el fundamento teórico. De acuerdo a la guía del laboratorio e indicaciones del profesor, se ha dividido el informe de la siguiente manera.
-
-\subsection*{1.1. Contenido}
-\begin{enumerate}
-  \item Introducción y objetivos del experimento
-\end{enumerate}
-
-\begin{itemize}
-  \item Contenido
-  \item Competencias generales
-  \item Competencias específicas
-\end{itemize}
-
-\begin{enumerate}
-  \setcounter{enumi}{1}
-  \item Fundamento teórico
-\end{enumerate}
-
-\begin{itemize}
-  \item Energía cinética de rotación y traslación
-  \item Momento de inercia
-  \item Dinámica de cuerpo rígido
-  \item Movimiento de rodadura
-  \item Aplicaciones en el experimento
-\end{itemize}
-
-\begin{enumerate}
-  \setcounter{enumi}{2}
-  \item Equipo utilizado y diagrama de flujo del experimento
-\end{enumerate}
-
-\begin{itemize}
-  \item Equipo utilizado
-  \item Diagrama de flujo del experimento
-\end{itemize}
-
-\begin{enumerate}
-  \setcounter{enumi}{3}
-  \item Procedimiento experimental
-  \item Cálculos y resultados
-\end{enumerate}
-
-\begin{itemize}
-  \item Uso de unidades
-  \item Uso de cifras significativas
-  \item Cálculo de errores
-  \item Resultados obtenidos y comparación con otros conocidos
-  \item Resultados obtenidos
-  \item Tablas, gráficos y comparación con otros resultados conocidos
-\end{itemize}
-
-\begin{enumerate}
-  \setcounter{enumi}{5}
-  \item Cuestionario, observaciones y sugerencias
-\end{enumerate}
-
-\begin{itemize}
-  \item Respuestas al cuestionario
-  \item Observaciones
-  \item Sugerencias
-\end{itemize}
-
-\begin{enumerate}
-  \setcounter{enumi}{6}
-  \item Conclusiones
-  \item Bibliografía
-\end{enumerate}
-
-\subsection*{1.2. Competencias generales}
-\begin{itemize}
-  \item Observar el movimiento de rodadura de una rueda de Maxwell y a partir de las mediciones efectuadas determinar el momento de inercia de la rueda con respecto al eje perpendicular que pasa por su centro de su gravedad.
-\end{itemize}
-
-\subsection*{1.3. Competencias específicas}
-\begin{itemize}
-  \item Medir el tiempo en el cual la rueda realiza cada recorrido.
-  \item Medir la masa y dimensiones de la rueda para calcular el momento de inercia de la rueda por dos métodos: Por su energía cinética de rotación y por la distribución geométrica de su masa.\\
-*Aclaración: Debido a indicaciones del profesor, no se calculó el momento de inercia de la rueda por la distribución geométrica de su masa.
-\end{itemize}
-
-\section*{2. Fundamento teórico}
-\subsection*{2.1. Energía cinética de rotación y traslación}
+\section{Fundamento teórico}
+\subsection{ Energía cinética de rotación y traslación}
 Sabemos que la energía cinética viene dada por la expresión $E_{c}=\frac{1}{2} m v^{2}$.\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-03}
 
-Figura 1: Sistema simple\\
-Considerando el sistema de dos cuerpos A y B unidos por una barra de masa insignificante que rotan alrededor de un eje que pasa por un punto de la barra y es\\
-perpendicular a esta con velocidad angular $\vec{w}$, mostrado en 1 ; luego, la energía cinética del sistema está dada por la siguiente expresión:
+\begin{figure}[H]
+    \centering
+        \includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-03}
+    \caption{Sistema simple}
+\end{figure}
+
+Considerando un sistema compuesto por dos cuerpos A y B, los cuales están conectados por una barra de masa despreciable y giran alrededor de un eje que pasa por un punto de la barra, siendo este eje perpendicular a la misma con una velocidad angular $\vec{w}$, como se muestra en la figura 1; entonces, la energía cinética del sistema se expresa de la siguiente manera:
 
 
 \begin{equation*}
@@ -310,7 +215,7 @@ E_{c}(\text { sistema })=\frac{1}{2} m_{A} w^{2} R_{A}^{2}+\frac{1}{2} m_{B} w^{
 
 Vemos que, en el caso de la rotación, la energía cinética depende del eje elegido, por lo que debemos separar la energía cinética en el movimiento de traslación y rotación. Luego $E_{\text {rotacionalA }}=\frac{1}{2} m_{A} w^{2} R_{A}^{2}$ y $E_{\text {rotacional } B}=\frac{1}{2} m_{B} w^{2} R_{B}^{2}$
 
-\subsection*{2.2. Momento de inercia}
+\subsection{Momento de inercia}
 De 2 podemos factorizar $\frac{1}{2} w^{2}$.
 
 $$
@@ -321,7 +226,8 @@ E_{c}(\text { sistema }) & =\frac{1}{2} m_{A} w^{2} R_{A}^{2}+\frac{1}{2} m_{B} 
 \end{aligned}
 $$
 
-De donde definimos $I=m_{A} R_{A}^{2}+m_{B} R_{B}^{2}$ como el momento de inercia del sistema respecto al eje, con $R_{A}$ y $R_{B}$ las distancias de los cuerpos A y B al eje, respectivamente. Entonces si tenemos un sistema discreto de "n"partículas, el momento de inercia respecto a un eje está dado por la siguiente expresión:
+El momento de inercia del sistema en relación con el eje se define como $I = m_A R_A^2 + m_B R_B^2$, donde $R_A$ y $R_B$ representan las distancias de los cuerpos $A$ y $B$ al eje, respectivamente.  
+Generalizando para un sistema discreto compuesto por $n$ partículas, la expresión correspondiente para el momento de inercia en torno a un eje es:
 
 
 \begin{equation*}
@@ -329,8 +235,9 @@ De donde definimos $I=m_{A} R_{A}^{2}+m_{B} R_{B}^{2}$ como el momento de inerci
 \end{equation*}
 
 
-Donde $m_{i}$ es la masa del cuerpo i-ésimo y $R_{i}$ es la mínima distancia del cuerpo i-ésimo al eje de rotación. Luego, si tenemos un sistema de masas continuo, debemos realizar esta sumatoria en base a un diferencial de masa $(d m \rightarrow 0)$ con distancia mínima $r_{i}$ al eje de rotación.
+Aquí, $m_i$ representa la masa de la i-ésima partícula, mientras que $R_i$ denota su distancia mínima al eje de rotación.  
 
+Si en lugar de un sistema discreto consideramos un sistema de masa continua, la sumatoria se transforma en una integral, tomando un elemento diferencial de masa $(dm \rightarrow 0)$ cuya distancia mínima al eje de rotación es $r_i$.
 
 \begin{equation*}
 I=\lim _{d m_{i} \rightarrow 0} \sum r_{i}^{2} d m_{i} \tag{4}
@@ -346,15 +253,22 @@ I=\int r^{2} d m \tag{5}
 
 
 Para resolver esta integral, hace falta saber como varía la masa respecto a la distancia mínima al eje de rotación.\\
-Si ya conocemos el centro de masa del objeto, y consideramos una lámina plana de este, podemos hallar el momento de inercia de un eje paralelo a uno que pase por el centro de masa del objeto y que sea perpendicular al plano de la lámina.\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-05}
 
-Figura 2: Sistema de masas continuo\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-05(1)}
+Si el centro de masa del objeto es conocido y consideramos una lámina plana del mismo, es posible determinar el momento de inercia respecto a un eje paralelo a otro que atraviesa su centro de masa y que es perpendicular al plano de la lámina.
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-05}
+\caption{Sistema de masas continuo}
+\end{figure}
 
-Figura 3: lámina plana del objeto.
 
-Donde $\overrightarrow{r_{i}}$ es la posición del elemento de masa $m_{i}$ respecto al $\mathrm{CM},{\overrightarrow{r_{i}}}^{\prime}$ es la posición del elemento respecto al eje paralelo y $\overrightarrow{C M}^{\prime}$ es la posición del centro de masa respecto al eje paralelo.\\
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-05(1)}
+\caption{lámina plana del objeto. }
+\end{figure}
+
+Aquí, $\overrightarrow{r_{i}}$ representa la posición del elemento de masa $m_{i}$ en relación con el centro de masa (CM), mientras que ${\overrightarrow{r_{i}}}^{\prime}$ denota su posición con respecto al eje paralelo. Asimismo, $\overrightarrow{C M}^{\prime}$ es la posición del centro de masa en relación con dicho eje paralelo.
 Luego, sabemos que : $\vec{r}_{i}^{\prime}=r_{C M}^{\prime}+\overrightarrow{r_{i}}, \sum_{i=1}^{n} m_{i} r_{i}^{\prime 2},{\overrightarrow{r_{i}}}^{\prime}={\overrightarrow{x_{i}}}^{\prime}+\vec{y}_{i}^{\prime}$ con $x_{i} \perp y_{i}$. Luego:
 
 $$
@@ -388,24 +302,49 @@ $$
 \end{aligned}
 $$
 
-Donde d es la distancia del eje paralelo al eje que pasa por el CM del sistema. Luego, esto se replica en todas las láminas que conforman el volumen del objeto, dando a entender que se cumple en objetos de cualquier dimensión.\\
-Físicamente, el momento de inercia es la resistencia que ofrece el cuerpo a rotar sobre el eje elegido. También hay que tomar en cuenta al eje elegido, pues de este depende el momento de inercia, al variar las distancias respecto al eje si es que lo cambiamos.
 
-\subsection*{2.3. Dinámica de cuerpo rígido}
+Aquí, $d$ representa la distancia entre el eje paralelo y el eje que pasa por el centro de masa del sistema.  
+Este razonamiento puede extenderse a todas las láminas que conforman el volumen del objeto, lo que sugiere que es válido para objetos en cualquier dimensión.  
+
+Desde un punto de vista físico, el momento de inercia mide la resistencia de un cuerpo a rotar en torno a un eje dado.  
+Es fundamental considerar la elección del eje de rotación, ya que el momento de inercia depende de este, pues modificar el eje implica alterar las distancias de los elementos de masa con respecto a él.
+\subsection{Dinámica de cuerpo rígido}
 Definimos al torque de una fuerza como una cantidad asociada a la capacidad de la fuerza, de alterar el estado de rotación de un cuerpo rígido.\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-06}
 
-Figura 4: Representación del torque de una fuerza
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-06}
+\caption{Representación del torque de una fuerza }
+\end{figure}
 
-Observamos que solo $F_{\text {tangencial }}$ es capaz de alterar dicho estado de rotación respecto al punto de aplicación y el eje de rotación. Esto se debe a que, solo esta fuerza produce cambio en la velocidad tangencial y como $|\vec{v}|=|\vec{w}| \cdot|\vec{r}|$, implica entonces que $\vec{w}$ aumenta. Luego observamos que el sentido de giro está ligado a la dirección del vector $\vec{r} \times \vec{F}$. Luego afirmamos: ${\overrightarrow{t_{e j e}}}^{F}=\vec{r} \times \vec{F}$\\
-Después, podemos notar que si la distancia respecto al eje de giro es lo suficientemente grande como para considerar al cuerpo rígido una partícula, podemos notar una nueva magnitud vectorial llamada momento angular, dada por la expresión $\vec{L}=\vec{r} \times \vec{p}$ (Donde\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-07(1)}
 
-Figura 5: Representación de $\vec{r} \times \vec{F}$ y su relación con el torque\\
+Observamos que únicamente la fuerza tangencial, $F_{\text{tangencial}}$, es capaz de modificar el estado de rotación en relación con el punto de aplicación y el eje de rotación.  
+Esto se debe a que solo esta fuerza genera un cambio en la velocidad tangencial, y dado que $|\vec{v}| = |\vec{\omega}| \cdot |\vec{r}|$, se concluye que $\vec{\omega}$ aumenta.  
+
+Además, el sentido de giro está determinado por la dirección del vector $\vec{r} \times \vec{F}$.  
+De este modo, podemos establecer la siguiente expresión para el torque debido a la fuerza aplicada:  
+\[
+{\overrightarrow{\tau_{\text{eje}}}}^{F} = \vec{r} \times \vec{F}
+\]  
+
+Si la separación respecto al eje de rotación es suficientemente amplia para tratar al cuerpo rígido como una partícula, se introduce una nueva magnitud vectorial conocida como momento angular, definida por la expresión:
+\[
+\vec{L} = \vec{r} \times \vec{p}
+\]
+donde
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-07(1)}
+\caption{Representación de $\vec{r} \times \vec{F}$ y su relación con el torque}
+\end{figure}
+
 $p$ es la cantidad de movimiento lineal y r es la posición del cuerpo rígido respecto al eje de giro).\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-07}
 
-Figura 6: Se desprecian las dimensiones del cuerpo rígido
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-07}
+\caption{Se desprecian las dimensiones del cuerpo rígido }
+\end{figure}
 
 Si derivamos $\vec{L}$ respecto al tiempo, tenemos:
 
@@ -419,15 +358,26 @@ $$
 \end{aligned}
 $$
 
-Luego, si elegimos el eje adecuado, de tal manera que $\vec{L} \| \vec{w}$ (y al ocurrir: $\vec{r} \perp \vec{w}$ ). Tenemos: $\vec{L}=m \vec{r} \times(\vec{w} \times r)=m(<\vec{r}, \vec{r}>\vec{w}-<\vec{w}, \vec{r}>\vec{r})=m r^{2} \vec{w}=I \vec{w}$ Donde I es el momento de inercia del cuerpo rígido respecto al eje. Luego si derivamos, queda : $\overrightarrow{t_{e j e}^{F}}=I \vec{\alpha}$ (donde $\vec{\alpha}$ es la aceleración angular).
 
-\subsection*{2.4. Movimiento de rodadura}
-Un caso especial de la combinación del movimiento de traslación y rotación de un cuerpo rígido(en este caso una rueda simétrica), es el movimiento de rodadura pura(rueda sin resbalar). Físicamente, no resbalar significa que el punto de contacto entre\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-08(1)}
+Luego, si seleccionamos el eje adecuado de modo que $\vec{L} \| \vec{w}$ (y se cumple que: $\vec{r} \perp \vec{w}$), obtenemos:
+\[
+\vec{L} = m \vec{r} \times (\vec{w} \times \vec{r}) = m (\langle \vec{r}, \vec{r} \rangle \vec{w} - \langle \vec{w}, \vec{r} \rangle \vec{r}) = m r^{2} \vec{w} = I \vec{w}
+\]
+donde $I$ es el momento de inercia del cuerpo rígido respecto al eje. Luego, al derivar, obtenemos:
+\[
+\overrightarrow{\tau_{e j e}^{F}} = I \vec{\alpha}
+\]
+donde $\vec{\alpha}$ es la aceleración angular.
+\subsection{ Movimiento de rodadura}
 
-Figura 7: Rotación+Traslación sin resbalar\\
-la rueda y la superficie no tenga desplazamiento ni velocidad, como consecuencia de las condiciones iniciales: $v_{C M}=w R$; este punto es llamado centro instantáneo de rotación(CIR), ya que la rueda aparenta rotar en un eje instantáneo perpendicular al plano de la rueda que pasa por el punto de contacto. De esto, tenemos que la rueda solo realiza rotación respecto al CIR, por lo que si hay pérdidas, estas serían por rotación y no por traslación. Pero observamos que podemos reformular la expresión en función a las características del centro de masa(velocidad de este y momento de inercia respecto a un eje que pasa por el centro de masa y es perpendicular al plano de la rueda).
+Un caso particular de la combinación del movimiento de traslación y rotación de un cuerpo rígido (en este caso, una rueda simétrica) es el movimiento de rodadura pura (rueda sin deslizamiento). Físicamente, el no deslizamiento implica que el punto de contacto entre
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-08(1)}
+\caption{Rotación+Traslación sin resbalar}
+\end{figure}
 
+La rueda y la superficie no experimentan desplazamiento ni velocidad en el punto de contacto, como resultado de las condiciones iniciales: $v_{C M} = w R$; este punto se denomina centro instantáneo de rotación (CIR), ya que la rueda parece girar alrededor de un eje instantáneo perpendicular al plano de la rueda que pasa por el punto de contacto. De esto, concluimos que la rueda únicamente realiza rotación respecto al CIR, por lo que, si existen pérdidas, estas se deben a la rotación y no a la traslación. Sin embargo, podemos reformular la expresión en términos de las características del centro de masa (su velocidad y el momento de inercia respecto a un eje que pasa por el centro de masa y es perpendicular al plano de la rueda).
 $$
 \begin{aligned}
 E_{\text {rotacional }} & =\frac{1}{2} I_{C I R} w^{2} \\
@@ -440,25 +390,33 @@ $$
 
 Donde $m$ es la masa de la rueda.\\
 En el caso ideal, la rueda y la superficie no se deforman por acción de las fuerzas. Como\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-08}
 
-Figura 8: DCL de la rueda en un plano inclinado.\\
-el punto de contacto no se desplaza, $W_{f s}=W_{F N C}=0$ y por lo tanto se conserva la\\
-energía mecánica.\\
-En un caso real, se consideran las deformaciones de la rueda y la superficie, además se puede apreciar que la rueda desliza producto de las formaciones, este fenómeno se conoce como fricción por rodadura.\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-09}
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-08}
+\caption{DCL de la rueda en un plano inclinado.}
+\end{figure}
 
-Figura 9: Se aprecian deformaciones
+El punto de contacto no experimenta desplazamiento, $W_{f s} = W_{F N C} = 0$, y por lo tanto, se conserva la energía mecánica.\\
+En un escenario real, se toman en cuenta las deformaciones de la rueda y la superficie, y además, se observa que la rueda desliza debido a las deformaciones. Este fenómeno se conoce como fricción por rodadura.\\
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-09}
+\caption{Se aprecian deformaciones}
+\end{figure}
 
-Esto causa la pérdida de energía mecánica; aunque es común despreciar este efecto en experimentaciones reales, al ser la rueda y la superficie muy rígidas como para observar efectos apreciables a causa de la fricción por rodadura, por lo que consideramos, la energía mecánica se conserva en estos casos también.
 
-\subsection*{2.5. Aplicaciones en el experimento}
-Tenemos una rueda de Maxwell brindada en el laboratorio, que tiene un eje perpendicular al plano de la rueda, el cual pasa por su centro de gravedad. El eje es un cilindro concéntrico a la rueda con un radio $\mathrm{r}<\mathrm{R}$ (radio de la rueda), similar a lo que se muestra en la figura (a). En la figura 10b tenemos marcados los puntos $A_{0}, A_{1}, A_{2}$,\\
-\includegraphics[scale = 0.15, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-09(1)}
+Esto genera una pérdida de energía mecánica; sin embargo, es frecuente ignorar este efecto en experimentos reales, dado que la rueda y la superficie son lo suficientemente rígidas como para no notar efectos significativos debido a la fricción por rodadura. Por lo tanto, se considera que la energía mecánica se conserva también en estos casos.
 
-Figuras referenciales\\
-$A_{3}$ y $A_{4}$ separados 10 cm ; tenemos también $G_{0}$ y $G_{4}$ que representan las posiciones del centro de gravedad de la tierra, en el punto más alto y bajo de su trayectoria respectivamente. Por todo lo antes visto, despreciamos la fricción por rodadura, y por ende, se conserva la energía mecánica. Por lo que :
+\subsection{Aplicaciones en el experimento}
 
+Contamos con una rueda de Maxwell proporcionada en el laboratorio, la cual posee un eje perpendicular al plano de la rueda que pasa por su centro de gravedad. El eje es un cilindro concéntrico con la rueda, cuyo radio $\mathrm{r} < \mathrm{R}$ (siendo $\mathrm{R}$ el radio de la rueda), similar a lo mostrado en la figura (a). En la figura 10b, se encuentran marcados los puntos $A_{0}, A_{1}, A_{2}$,
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{2025_04_01_ea720b93e8ebb5d0c6aeg-09(1)}
+\end{figure}
+
+$A_{3}$ y $A_{4}$ están separados por 10 cm; también contamos con $G_{0}$ y $G_{4}$, que representan las posiciones del centro de gravedad de la rueda, en el punto más alto y más bajo de su trayectoria, respectivamente. Debido a todo lo mencionado anteriormente, se desprecia la fricción por rodadura, y por lo tanto, se conserva la energía mecánica. Por lo que:
 
 \begin{align*}
 E_{M(4)} & =m g h_{4}+\frac{1}{2} I_{G} w_{G_{4}}^{2}+\frac{1}{2} m v_{G_{4}}^{2}  \tag{6}\\
@@ -468,20 +426,65 @@ E_{M(4)} & =m g h_{4}+\frac{1}{2} I_{G} w_{G_{4}}^{2}+\frac{1}{2} m v_{G_{4}}^{2
 m g h_{0}\left(v_{G_{0}}=0\right) & =m g h_{4}+\frac{1}{2} I_{G} \frac{v_{G_{4}}^{2}}{r^{2}}+\frac{1}{2} m v_{G_{4}}^{2} \tag{10}
 \end{align*}
 
-
-Luego $x=\frac{1}{2} a t^{2}$ respecto al centro de gravedad al ser la posición inicial $x=0 \mathrm{y}$ observarse un MRUV por parte de la rueda, producto de una aceleración constante producida por el peso, la fricción estática y la fuerza normal. Luego sabemos $v_{G}=a t$ al ser $v_{0}=0$, luego $v_{G}=\frac{2 x}{t}$. Con todo esto, podemos realizar el experimento y verificar los resultados, midiendo solo la velocidad, el radio del eje de giro, el desplazamiento y el tiempo transcurrido.
-
-\section*{3. Equipo utilizado y diagrama de flujo del experimento}
-\subsection*{3.1. Equipo utilizado}
+Posteriormente, $x = \frac{1}{2} a t^{2}$ en relación con el centro de masa, dado que la posición inicial es $x = 0$ y se observa un MRUV en la rueda, generado por una aceleración constante debido al peso, la fricción estática y la fuerza normal. Sabemos que $v_{G} = a t$ cuando $v_{0} = 0$, por lo que $v_{G} = \frac{2 x}{t}$. Con estos datos, podemos realizar el experimento y comprobar los resultados, midiendo únicamente la velocidad, el radio del eje de rotación, el desplazamiento y el tiempo transcurrido.
+\section{Equipo utilizado y diagrama de flujo del experimento}
+\subsection{Equipo utilizado}
 \begin{itemize}
   \item Un par de rieles paralelos (como plano inclinado)
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{rieles}
+\end{figure}
+          
   \item Una rueda de Maxwell
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{rueda}
+\end{figure}
   \item Un cronómetro digital
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{cronometro}
+\end{figure}
   \item Un pie de rey
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{vernier}
+\end{figure}
   \item Una regla milimetrada
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{vernier}
+\end{figure}
   \item Una balanza
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{balanza}
+\end{figure}
   \item Un nivelador
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.40, center]{nivel}
+\end{figure}
 \end{itemize}
+
+\subsection{Diagrama de Flujo}
+\begin{figure}[H]
+    \centering
+\includegraphics[scale = 0.30, center]{Diagrama}
+\caption{Diagrama de Flujo}
+\end{figure}
+\end{itemize}
+
+\section{Procedimiento Experimental}
+\begin{itemize}
+\end{itemize}
+\section{C\'{a}lculos y resultados}
+\section{Cuestionario}
+\section{Conclusiones}
+\section{Anexo}
+
 
 
 \end{document}
+
