--- a/Problems/2127D.md
+++ b/Problems/2127D.md
@@ -18,6 +18,8 @@ URL:
 
 ## Lista de WA antes del AC
 
+- no considere que cada casa tiene que tener como maximo dos compartimentos, es decir solo esta permitido que haiga 2 que no sean hojas de los hijos.
+
 ## Metacognition (Existe mejores, otras soluciones? Puedes demostrar, estar completamente seguro de tu solucion, demustralo!!)
 
 - sin editorial!(for you of future)
